# libfit

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ex.cpp  libfit.files  makefile
doc/: classes_diagram.odg
headers/: All  CMakeLists.txt  Core  UI  core  ui
src/: All  CMakeLists.txt  Core  UI
src/core/: app.cpp  app.hpp  fchar.cpp  fchar.hpp  fevent.cpp  fevent.hpp  flinklist.cpp  flinklist.hpp  flog.cpp  flog.hpp  fmatrix.cpp  fmatrix.hpp  fmatrix_impl.cpp  fnode.cpp  fnode.hpp  fobject.cpp  fobject.hpp  frect.cpp  frect.hpp  fstringlist.cpp  fstringlist.hpp  fthreadable.cpp  fthreadable.hpp  ftools.cpp  ftools.hpp  ftree.cpp  ftree.hpp  fvec2.cpp  fvec2.hpp  fvector.cpp  fvector.hpp
src/ui/: finput.cpp  finput.hpp  finputhandler.cpp  finputhandler.hpp  flabel.cpp  flabel.hpp  fpattern.cpp  fpattern.hpp  fprogbar.cpp  fprogbar.hpp  ftextalign.cpp  ftextalign.hpp  fwidget.cpp  fwidget.hpp  ui.cpp  ui.hpp
test/: CMakeLists.txt  demo_ui.cpp  input.cpp  log.cpp  matrix.cpp  murica.cpp  stringlist.cpp  tree.cpp
